--- a/.env
+++ b/.env
@@ -29,5 +29,6 @@ APP_SECRET=526b313b09f3af4f21066d034f32810f
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/loup-garou?serverVersion=5.7
+DATABASE_URL=mysql://d29tc7ektltub055:ljiul6v18339dbi1@ivgz2rnl5rh7sphb.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/n3irgn9ocw1o09ed
+#DATABASE_URL=mysql://root:@127.0.0.1:3306/loup-garou?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
